Bug fix - footer alignment

--- a/src/styles/footer.css
+++ b/src/styles/footer.css
@@ -7,6 +7,7 @@
   font-size: 2em;
   font-weight: 800;
   margin-bottom: 23px;
+  margin-left: 11%;
 }
 input {
   width: 30%;
